library public ip added

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/swagger": "^4.0.9",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.0",
+    "public-ip": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
     "rxjs": "^6.5.3",
